bin/tests/snapshots/inherit_ordering__0ed632cb9fe985e2bfdde661a844b938_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit zebra yak; inherit yak ${apple}; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit zebra yak; inherit yak ${apple}; }
+{ inherit ${apple} yak yak zebra; }
