bin/tests/snapshots/inherit_ordering__0ed632cb9fe985e2bfdde661a844b938_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit zebra yak; inherit yak ${apple}; }
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:1:17 ]
   │
 1 │ { inherit zebra yak; inherit yak ${apple}; }
   │                 ─┬─  
   │                  ╰─── yak is out of alphabetical order
───╯
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:1:22 ]
   │
 1 │ { inherit zebra yak; inherit yak ${apple}; }
   │                      ──────────┬──────────  
   │                                ╰──────────── These consecutive inherit statements can be merged into one
───╯
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:1:34 ]
   │
 1 │ { inherit zebra yak; inherit yak ${apple}; }
   │                                  ────┬───  
   │                                      ╰───── ${apple} is out of alphabetical order
───╯
