bin/tests/snapshots/inherit_ordering__448ce409b09e0930bf3063ddfcd0f356_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    mkEnableOption
    mkIf
    mkMerge
    mkPackageOption
    mkOption
    ;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -2,8 +2,8 @@
   inherit (lib)
     mkEnableOption
     mkIf
     mkMerge
+    mkOption
     mkPackageOption
-    mkOption
     ;
 }
