bin/tests/snapshots/inherit_ordering__448ce409b09e0930bf3063ddfcd0f356_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    mkEnableOption
    mkIf
    mkMerge
    mkPackageOption
    mkOption
    ;
}
---
<temp_file_path>>7:5:W:39:[inherit_ordering] `mkOption` is out of alphabetical order
