bin/tests/snapshots/inherit_ordering__448ce409b09e0930bf3063ddfcd0f356_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    mkEnableOption
    mkIf
    mkMerge
    mkPackageOption
    mkOption
    ;
}
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:7:5 ]
   │
 7 │     mkOption
   │     ────┬───  
   │         ╰───── mkOption is out of alphabetical order
───╯
