bin/tests/snapshots/inherit_ordering__45d7ba807a521b2add410089f2109db9_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib) mkMerge mkIf;
  inherit (inputs) self nixpkgs;
  inherit zebra apple;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 {
-  inherit (lib) mkMerge mkIf;
-  inherit (inputs) self nixpkgs;
-  inherit zebra apple;
+  inherit (lib) mkIf mkMerge;
+  inherit (inputs) nixpkgs self;
+  inherit apple zebra;
 }
