bin/tests/snapshots/inherit_ordering__45d7ba807a521b2add410089f2109db9_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib) mkMerge mkIf;
  inherit (inputs) self nixpkgs;
  inherit zebra apple;
}
---
<temp_file_path>>2:25:W:39:[inherit_ordering] `mkIf` is out of alphabetical order
<temp_file_path>>3:25:W:39:[inherit_ordering] `nixpkgs` is out of alphabetical order
<temp_file_path>>4:17:W:39:[inherit_ordering] `apple` is out of alphabetical order
